--- a/style_main.css
+++ b/style_main.css
@@ -1,8 +1,3 @@
-body {
-    background-color:#AAAAAA;
-    position:relative;
-
-}
 :root {
     --whiteColor: rgb(255, 255, 255);
     --redColor:rgb(189, 61, 58);
@@ -10,18 +5,23 @@ body {
     --greenColor:rgb(0, 128, 0);
     --yellowColor:rgb(236, 219, 84);
     --blueColor:rgb(3, 79, 132);
-  }
-
-  .button{
-      visibility:hidden;
-  }
-  .container.container_down{
-    width:700px;
-    height:auto;
-    
 }
 
-.container{
+body {
+    background-color:#AAAAAA;
+    position:relative;
+}
+
+.button {
+    visibility:hidden;
+}
+
+.container-label {
+    width:700px;
+    height:auto;  
+}
+
+.container {
     background-color:black;
     width:780px;
     margin:100px auto;
@@ -29,9 +29,8 @@ body {
     border-radius: 2%;  
 }
 
-
 .row {
-display:flex;
+    display:flex;
 }
 
 .box {
@@ -45,28 +44,33 @@ display:flex;
     width: 260px;
     height:260px;
     line-height:260px;
-    border-radius:5%;
-    
+    border-radius:5%;    
 }
+
 .box1 {
     background-color:var(--blueColor);
 }
+
 .box2 {
     background-color:var(--redColor);
 }
 
 .box3 {
-    background-color:#FFF;
+    background-color:var(--whiteColor);
 }
+
 .box4 {
     background-color:var(--whiteColor);
 }
+
 .box5{
     background-color:var(--blueColor);
 }
+
 .box6 {
     background-color:var(--whiteColor);;
 }
+
 .box7 {
     background-color:var(--redColor);;
 }
@@ -79,14 +83,12 @@ display:flex;
     background-color:var(--whiteColor);
 }
 
-
-
-h2{
-margin:0 auto;
-text-align: center;
-font-size:60px;
-color:white;
-font-family: 'Roboto', sans-serif;
+h2 {
+    margin:0 auto;
+    text-align: center;
+    font-size:60px;
+    color:white;
+    font-family: 'Roboto', sans-serif;
 }
 
 /*
